<resources>
    <string name="app_name">MarketPlacePUJ</string>
    <string name="text_loading">Sincronizando datos</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_password">Contraseña</string>
    <string name="text_login">Iniciar Sesión</string>
    <string name="text_create_account">Crear cuenta</string>
    <string name="text_sign_in">Iniciando sesión</string>
    <string name="text_toolbar_products">Productos</string>
    <string name="text_confirm_password">Confirmar contraseña</string>
    <string name="text_sign_up">Crear cuenta</string>
    <string name="text_sign_up_2">Creando cuenta</string>
    <string name="error_invalid_email">El correo electrónico no es válido</string>
    <string name="error_invalid_password">Las contraseñas no son iguales</string>
    <string name="error_empty_fields">Algunos campos vacíos son requeridos</string>
    <string name="error_password_too_short">La longitud de la contraseña debe ser de al menos 6 caracteres</string>
    <string name="text_search">Buscar</string>
    <string name="text_loading_products">Cargando productos</string>
    <string name="text_categories">Categorías</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_toolbar_cart">Carrito</string>
    <string name="text_toolbar_profile">Perfil</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="text_description">Descripción:</string>
    <string name="text_add_to_cart">Agregar al Carrito</string>
    <string name="text_size_availables">Tallas disponibles</string>
    <string name="text_select_quantity">Elige cantidad</string>
    <string name="text_cart">Carrito</string>
    <string name="text_pay">Pagar</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_not_now">Ahora no</string>
    <string name="text_creating_order">Creando orden</string>
    <string name="text_buy_products">Desea comprar los productos que ha seleccionado?</string>
    <string name="text_buy_title">Compra de productos</string>
    <string name="text_success_purchase">Compra realizada exitosamente</string>
    <string name="text_quantity">Cantidad: %1$s</string>
    <string name="text_profile">Perfil</string>
    <string name="error_getting_user_profile">Error obteniendo perfil de usuario</string>
    <string name="text_loading_profile">Sincronizando perfil</string>
    <string name="text_label_close_session">Cerrar Sesión</string>
    <string name="text_label_change_password">Cambiar Contraseña</string>
    <string name="text_label_edit_profile">Editar Perfil</string>
    <string name="text_label_order_history">Historial de Compra</string>
    <string name="confirmation_dialog_default_title">Confirmar</string>
    <string name="error_closing_session">No se pudo cerrar la sesión, intente más tarde</string>
    <string name="closing_session">Cerrando Sesión</string>
    <string name="text_close_session_message">Desea cerrar la sesión y volver a la pantalla de inicio de sesión?</string>
    <string name="text_new_password">Nueva contraseña</string>
    <string name="changing_password">Cambiando contraseña</string>
    <string name="error_recent_login_required">Error, por favor vuelva a iniciar sesión</string>
    <string name="session_closed">Se ha cerrado la sesión</string>
    <string name="password_changed">Contraseña cambiada, vuelva a inicia sesión</string>
    <string name="error_passwords_not_equal">No se pudo cambiar la constraseña, intente más tarde</string>
    <string name="text_label_name">Nombre</string>
    <string name="text_address">Dirección de entrega</string>
    <string name="text_edit_profile_message">A continuación puedes editar la información de tu usuario</string>
    <string name="updating_profile">Actualizando perfil</string>
    <string name="profile_updated">Perfil actualizado</string>
    <string name="error_no_user_found">Usuario no encontrado</string>
    <string name="text_loading_orders">Sincronizando órdenes</string>
    <plurals name="quantity">
        <item quantity="one">%d Unidad</item>
        <item quantity="other">%d Unidades</item>
    </plurals>
    <plurals name="quantity_available">
        <item quantity="one">Cantidad: %1$d (%2$d Disponible)</item>
        <item quantity="other">Cantidad: %1$d (%2$d Disponibles)</item>
    </plurals>
    <plurals name="elements">
        <item quantity="one">%1$d Elemento)</item>
        <item quantity="other">%1$d Elementos</item>
    </plurals>
</resources>