<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/connecting_dialog_bg_inset"
    android:backgroundTint="@color/purple">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/white"
        android:text="@string/text_label_edit_profile"
        android:textAlignment="viewStart"
        android:textAppearance="@style/ToolbarTextAppearance"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/outline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_edit_profile_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_16dp_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage">

        <com.example.marketplacepuj.core.components.view.CustomEditText
            android:id="@+id/edtName"
            style="@style/SimpleEdittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/outline_account_circle_24"
            android:drawableTint="@color/toolbarTextColor"
            android:hint="@string/text_label_name"
            android:inputType="text"
            android:textColorHint="@color/toolbarTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.marketplacepuj.core.components.view.CustomEditText
            android:id="@+id/edtAddress"
            style="@style/SimpleEdittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_directions"
            android:drawableTint="@color/toolbarTextColor"
            android:hint="@string/text_address"
            android:inputType="text"
            android:textColorHint="@color/toolbarTextColor"
            app:layout_constraintEnd_toEndOf="@+id/edtName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtName"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAccept"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/text_accept"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/tvError" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_not_now"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btnAccept"
            app:layout_constraintEnd_toStartOf="@+id/btnAccept"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnAccept" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/edtAddress"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="@+id/edtAddress"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress"
            tools:text="Error en la contraseña" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>